# runpy

./: .gitignore  CLAUDE.md  CLI_USAGE.md  README.md  pyproject.toml  pytest.ini  quick_test.py  run_tests.sh  test_bool_debug.py  test_cli_demo.py  test_fix.py  test_verification.py  verify_fix.md
allure-results/: dfb99b59-784f-4813-9db4-db4f7639df40-result.json
dev/: temp.md
example/: load_dependencies.py  migration_guide.md  miniature.json  pkg.json
example/src/component/my_card/: pkg.json
example/src/component/my_card2/: .exclude  Card.tsx  pkg.json
examples/: README.md  file_processor.py  simple_calculator.py  task_manager.py  test_docs.py
prompts/: before_move_to_next_task.md  development.md  user.md
real_example/: miniature.json
src/miniature/: __init__.py  cache.py  cli.py  load.py  models.py  publish.py  push.py  tag.py  utils.py
src/runpycli/: __init__.py  analyzer.py  click_helpers.py  core.py  group.py  pydantic_utils.py
src/runpycli/commands/: __init__.py  docs.py  schema.py
test/: click_nested_example.py
test/features/: test_runpy_advanced.py  test_runpy_basemodel_docs.py  test_runpy_basic.py  test_runpy_docs_command.py  test_runpy_hierarchy.py  test_runpy_schema.py
test/unittests/: test_cli_invoke.py  test_debug_invoke.py  test_optional_bug.py  test_parsers.py
tests/: README.md  conftest.py  test_load_bdd.py  test_pkg_json_format.py  test_publish_bdd.py  test_repotree_integration_bdd.py
