[project]
name = "runpycli"
version = "0.3.0-alpha.1"
description = "Convert Python functions to CLI commands automatically"
authors = [
    {name = "crimson206",email = "sisung.kim1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cleo (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]
